# voxlane

./: .env  Cargo.toml  README.md  README.zh.md
src/: config.rs  error.rs  lib.rs  main.rs
src/core/: commands.rs  events.rs  mod.rs  session.rs  state.rs  vad.rs
src/integration/: asr.rs  llm.rs  mod.rs  tts.rs
src/server/: mod.rs  router.rs  ws.rs
tests/: state_machine_test.rs
